syntax = "proto3";

import "google/protobuf/empty.proto";

package annuaire;

option java_package = "com.proto.annuaire";
option java_multiple_files = true;

message Personne {
  string nom = 1 ;
  string prenom = 2 ;
}
message InfoRessource {
  string bureau = 1;
  string notel = 2 ;
  string email = 3 ;
}
message Entree {
  Personne individu = 1 ;
  InfoRessource info = 2 ;
}
enum TypeCR {
  DONE = 0 ;
  DENY_DUPLICATED = 1 ;
  DENY_NOT_FOUND = 2 ;
  DENY_BAD_VALUES = 3 ;
  DENY_OTHER = 9 ;
}
message AURequest {
  Entree ressource = 1 ;
}
message AUDResponse {
  TypeCR cr = 1 ;
}
message DGRequest {
  Personne ressource = 1 ;
}
message GResponse {
  TypeCR cr = 1 ;
  optional Entree ressource = 2 ;
}
service GestionRessourcesService {
    rpc addRessource(AURequest) returns(AUDResponse){};
    rpc delRessource(DGRequest) returns(AUDResponse){};
    rpc modifyRessource(AURequest) returns (AUDResponse){};
    rpc getRessource(DGRequest) returns(GResponse){};
    rpc listRessources(google.protobuf.Empty) returns (stream Personne){}
}

